# ffmpeg-mediaplayer-android

./: .gitignore  README.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_common.h  audio_encoded_frame_decoder.cpp  audio_encoded_frame_decoder.h  audio_encoded_frame_file_writer.cpp  audio_encoded_frame_file_writer.h  audio_frame_writer.cpp  audio_frame_writer.h  audio_main.cpp  audio_player.cpp  audio_player.h  audio_recorder.cpp  jni_helper.h  log.h  media_demuxer.cpp  media_demuxer.h  media_player.cpp  media_player.h  media_utils.cpp  media_utils.h  video_encoded_frame_decoder.cpp  video_encoded_frame_decoder.h  video_encoded_frame_writer.cpp  video_encoded_frame_writer.h  video_frame_writer.cpp  video_frame_writer.h
app/src/main/cpp/libs/include/: config.h
app/src/main/cpp/libs/include/libavdevice/: avdevice.h
app/src/main/cpp/libs/include/libavformat/: avformat.h
app/src/main/java/com/sample/media/ffmpeg/: ContentUriUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
